syntax = "proto3";
package test;

// Simple scenario: Message removal
message ExistingMessage {
    int64 id = 1;
    string name = 2;
}

// This message will be removed
message OldMessage {
    int64 id = 1;
    string deprecated_field = 2;
}
